--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -41,6 +41,6 @@
   </div>
   <div class="publishing">
     <p class="publishing__text">&#9400; 2022 - IceCream.</p>
-    <p class="publishing__text publishing__text--capitalize"> rights reserved. </p>
+    <p class="publishing__text publishing__text--capitalize">all rights reserved. </p>
   </div>
 </footer>
