шел шестой день...

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,7 +10,7 @@ body {
         letter-spacing: 0.04em;
         
     background-repeat: repeat-y;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
 
     // mobile screen
