--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,7 +6,8 @@
                 <p class="contacts__text">cafe</p>
                 <div class="location">
                     <p class="location__text">Chicago</p>
-                    <span class="location__text location__text--color">10340 Ridgeland Ave, Chicago Ridge, IL 60415,
+                    <span class="location__text location__text--color">10340 Ridgeland Ave, Chicago Ridge, IL
+                        60415,
                         USA</span>
                 </div>
                 <ul class="timetable">
