--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -11,7 +11,7 @@ body {
         
     background-repeat: repeat-y;
     background-size: contain;
-    background-position: center;
+    background-position: top;
 
     // mobile screen
     background-image: url('.././images/bg/mobile-bg.jpg');
