--- a/src/partials/galery.html
+++ b/src/partials/galery.html
@@ -1,4 +1,4 @@
-<section class="swiper mySwiper">
+<section class="galery swiper mySwiper">
     <ul class="swiper-wrapper">
         <li class="swiper-slide">
             <img class="galery-picture" srcset="
