--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section id="contacts" class="contacts">
     <div class="container">
         <h2 class="visually-hidden">representation</h2>
         <ul class="contacts__list">
