--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,16 +15,16 @@
 
       <ul class="site-nav">
         <li class="site-nav__item">
-          <a href="#Home" class="site-nav__link">Home</a>
+          <a href="/index" class="site-nav__link">Home</a>
         </li>
         <li class="site-nav__item">
           <a href="#How it’s made?" class="site-nav__link">How it’s made?</a>
         </li>
         <li class="site-nav__item">
-          <a href="#Our products" class="site-nav__link">Our products</a>
+          <a href="#products" class="site-nav__link">Our products</a>
         </li>
         <li class="site-nav__item">
-          <a href="#Contact" class="site-nav__link">Contact</a>
+          <a href="#contacts" class="site-nav__link">Contact</a>
         </li>
       </ul>
 
@@ -64,16 +64,16 @@
 
   <ul class="mobile-menu">
     <li class="mobile-menu__item">
-      <a href="#" class="mobile-menu__link">Home</a>
+      <a href="/index" class="mobile-menu__link">Home</a>
     </li>
     <li class="mobile-menu__item">
       <a href="#" class="mobile-menu__link">How it’s made?</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#" class="mobile-menu__link">Our products</a>
+      <a href="#products" class="mobile-menu__link">Our products</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#" class="mobile-menu__link">Contact</a>
+      <a href="#contacts" class="mobile-menu__link">Contact</a>
     </li>
   </ul>
 
