--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,24 +1,28 @@
-<section class="header">
+<section class="header" id="header">
   <div class="container">
     <div class="header__nav">
       <a class="logo" href="#">
-        <img srcset="
+        <img
+          srcset="
             ./images/logo/desktop_logo@2x.png 120w,
             ./images/logo/desktop_logo@1x.png  60w,
             ./images/logo/tablet_logo@2x.png   96w,
             ./images/logo/tablet_logo@1x.png   48w,
             ./images/logo/mobile_logo@2x.png   80w,
             ./images/logo/mobile_logo.png      40w
-          " src="./images/logo/mobile_logo.png"
-          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw" alt="логотип" />
+          "
+          src="./images/logo/mobile_logo.png"
+          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw"
+          alt="логотип"
+        />
       </a>
 
       <ul class="site-nav">
         <li class="site-nav__item">
-          <a href="/index" class="site-nav__link">Home</a>
+          <a href="#header" class="site-nav__link">Home</a>
         </li>
         <li class="site-nav__item">
-          <a href="#How it’s made?" class="site-nav__link">How it’s made?</a>
+          <a href="#how-it’s-made?" class="site-nav__link">How it’s made?</a>
         </li>
         <li class="site-nav__item">
           <a href="#products" class="site-nav__link">Our products</a>
@@ -28,14 +32,19 @@
         </li>
       </ul>
 
-      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+      <button
+        class="menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
         <svg class="menu-toggle__icon" width="32" height="32">
           <use href="./images/icons.svg#burger"></use>
         </svg>
       </button>
 
-      <button class="button" type="button">
-        Buy now <svg class="button__icon" width="6" height="9">
+      <button class="header_button header_button--geometry" type="button">
+        Buy now
+        <svg class="header_button__icon" width="6" height="9">
           <use href="./images/icons.svg#button_vector"></use>
         </svg>
       </button>
@@ -53,31 +62,45 @@
   </button>
 
   <a class="logo" href="#">
-    <img srcset="
+    <img
+      srcset="
         ./images/logo/tablet_logo@2x.png 96w,
         ./images/logo/tablet_logo@1x.png 48w,
         ./images/logo/mobile_logo@2x.png 80w,
         ./images/logo/mobile_logo.png    40w
-      " src="./images/logo/mobile_logo.png" sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
-      alt="логотип" />
+      "
+      src="./images/logo/mobile_logo.png"
+      sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
+      alt="логотип"
+    />
   </a>
 
   <ul class="mobile-menu">
     <li class="mobile-menu__item">
-      <a href="/index" class="mobile-menu__link">Home</a>
+      <a href="./index.html" class="mobile-menu__link">Home</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#" class="mobile-menu__link">How it’s made?</a>
+      <a href="./index.html" class="mobile-menu__link">How it’s made?</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#products" class="mobile-menu__link">Our products</a>
+      <a href="./index.html" class="mobile-menu__link">Our products</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#contacts" class="mobile-menu__link">Contact</a>
+      <a href="./index.html" class="mobile-menu__link">Contact</a>
     </li>
   </ul>
 
-  <button class="button button--menu" type="button">
+  <button class="header_button header_button--menu" type="button">
     Buy now
+    <svg class="header_button__icon" width="6" height="9">
+      <use href="./images/icons.svg#button_vector"></use>
+    </svg>
   </button>
 </div>
+
+<script
+  defer
+  src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+  integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+  crossorigin="anonymous"
+></script>
