--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,19 +2,15 @@
   <div class="container">
     <div class="header__nav">
       <a class="logo" href="#">
-        <img
-          srcset="
+        <img srcset="
             ./images/logo/desktop_logo@2x.png 120w,
             ./images/logo/desktop_logo@1x.png  60w,
             ./images/logo/tablet_logo@2x.png   96w,
             ./images/logo/tablet_logo@1x.png   48w,
             ./images/logo/mobile_logo@2x.png   80w,
             ./images/logo/mobile_logo.png      40w
-          "
-          src="./images/logo/mobile_logo.png"
-          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw"
-          alt="логотип"
-        />
+          " src="./images/logo/mobile_logo.png"
+          sizes="(min-width: 1200px) 60px, (min-width: 768px) 48px, (max-width: 767px) 40px, 100vw" alt="логотип" />
       </a>
 
       <ul class="site-nav">
@@ -32,11 +28,7 @@
         </li>
       </ul>
 
-      <button
-        class="menu-toggle js-open-menu"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-      >
+      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
         <svg class="menu-toggle__icon" width="32" height="32">
           <use href="./images/icons.svg#burger"></use>
         </svg>
@@ -62,31 +54,27 @@
   </button>
 
   <a class="logo" href="#">
-    <img
-      srcset="
+    <img srcset="
         ./images/logo/tablet_logo@2x.png 96w,
         ./images/logo/tablet_logo@1x.png 48w,
         ./images/logo/mobile_logo@2x.png 80w,
         ./images/logo/mobile_logo.png    40w
-      "
-      src="./images/logo/mobile_logo.png"
-      sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
-      alt="логотип"
-    />
+      " src="./images/logo/mobile_logo.png" sizes="(min-width: 321px) 48px, (max-width: 320px) 40px, 100vw"
+      alt="логотип" />
   </a>
 
   <ul class="mobile-menu">
     <li class="mobile-menu__item">
-      <a href="./index.html" class="mobile-menu__link">Home</a>
+      <a href="/index" class="mobile-menu__link">Home</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="./index.html" class="mobile-menu__link">How it’s made?</a>
+      <a href="#" class="mobile-menu__link">How it’s made?</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="./index.html" class="mobile-menu__link">Our products</a>
+      <a href="#products" class="mobile-menu__link">Our products</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="./index.html" class="mobile-menu__link">Contact</a>
+      <a href="./contacts" class="mobile-menu__link">Contact</a>
     </li>
   </ul>
 
@@ -98,9 +86,6 @@
   </button>
 </div>
 
-<script
-  defer
-  src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
   integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-  crossorigin="anonymous"
-></script>
+  crossorigin="anonymous"></script>
