--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<!-- <section class="hero">
+<section class="hero">
     <div class="hero_container container">
 
         <div class="hero_sides">
@@ -58,22 +58,29 @@
 
         <ul class="hero_list-images">
             <li>
+               
+
                 <picture>
-                    <source media="(min-width: 1200px)"
-                        srcset="./images/ice-cream/desktop_ice-cream@1x.png 1x, ./images/ice-cream/desktop_ice-cream@2x.png 2x" />
-                    <source media="(min-width: 768px)"
-                        srcset="./images/ice-cream/tablet_ice-cream@1x.png 1x, ./images/ice-cream/tablet_ice-cream@2x.png 2x" />
-                    <img class="hero_image-icecream" src="./images/ice-cream/mobile_ice-cream@1x.png" alt="icecream"
-                        loading="lazy" />
+                    <source srcset="./images/ice-cream/mobile_ice-cream@1x.png 177w, ./images/ice-cream/mobile_ice-cream@2x.png 354w"
+                        media="(max-width: 767px)" sizes="(min-width: 320px) 177px, 100vw">
+                    <source srcset="./images/ice-cream/tablet_ice-cream@1x.png 268w, ./images/ice-cream/tablet_ice-cream@2x.png 536w"
+                        media="(max-width: 1199px)" sizes="(min-width: 768px) 268px, 100vw">
+                    <source srcset="./images/ice-cream/desktop_ice-cream@1x.png 456px, ./images/ice-cream/desktop_ice-cream@2x.png 912w"
+                        media="(min-width: 1200px)" sizes="(min-width: 1200px) 456px, 100vw">
+                    <img src="./images/hero/dots/mobile-dots@1x.png" alt="icecream" class="hero_image-icecream">
                 </picture>
             </li>
             <li>
+                
+
                 <picture>
-                    <source media="(min-width: 1200px)"
-                        srcset="./images/hero/dots/desktop-dots@1x.png 1x, ./images/hero/dots/desktop-dots@2x.png 2x" />
-                    <source media="(min-width: 768px)"
-                        srcset="./images/hero/dots/tablet-dots@1x.png 1x, ./images/hero/dots/tablet-dots@2x.png 2x" />
-                    <img class="hero_image-drops" src="./images/hero/dots/mobile-dots@1x.png" alt="dots">
+                    <source srcset="./images/hero/dots/mobile-dots@1x.png 320w, ./images/hero/dots/mobile-dots@2x.png 640w" media="(max-width: 767px)"
+                        sizes="(min-width: 320px) 320px, 100vw">
+                    <source srcset="./images/hero/dots/tablet-dots@1x.png 768w, ./images/hero/dots/tablet-dots@2x.png 1536w" media="(max-width: 1199px)"
+                        sizes="(min-width: 768px) 768px, 100vw">
+                    <source srcset="./images/hero/dots/desktop-dots@1x.png 1200w, ./images/hero/dots/desktop-dots@2x.png 2400w" media="(min-width: 1200px)"
+                        sizes="(min-width: 1200px) 1200px, 100vw">
+                    <img src="./images/hero/dots/mobile-dots@1x.png" alt="dots" class="hero_image-drops">
                 </picture>
             </li>
         </ul>
@@ -87,4 +94,4 @@
 
 
 
-</section> -->
+</section>
