--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,9 +6,12 @@
                 <p class="contacts__text">cafe</p>
                 <div class="location">
                     <p class="location__text">Chicago</p>
-                    <span class="location__text location__text--color">10340 Ridgeland Ave, Chicago Ridge, IL
-                        60415,
+                    <span class="location__text location__text--color location__text--none">10340 Ridgeland Ave, Chicago
+                        Ridge, IL 60415,
                         USA</span>
+                    <span class="location__text location__text--color location__text--hidden">10340 Ridgeland Ave,
+                        Chicago&nbspRidge, IL
+                        60415, USA</span>
                 </div>
                 <ul class="timetable">
                     <li class="timetable__item">
@@ -30,7 +33,12 @@
                 </ul>
             </li>
             <li class="contacts__item">
-                <p class="contacts__text contacts__text--width">food truck</p>
+                <p class="contacts__text contacts__text--width contacts__text--none">
+                    food truck
+                </p>
+                <p class="contacts__text contacts__text--width contacts__text--hidden">
+                    foodtruck
+                </p>
                 <div class="location">
                     <p class="location__text">Los Angeles</p>
                     <span class="location__text location__text--color">1003 Manhattan Ave, Manhattan Beach, CA 90263,
