--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -22,6 +22,7 @@
         #84a178 70%
       );
     }
+        
   }
 
   &__list {
@@ -114,6 +115,18 @@
       width: 148px;
     }
   }
+
+    &__text--none {
+      @media screen and (max-width: 767px) {
+        display: none;
+      }
+    }
+  
+    &__text--hidden {
+      @media screen and (min-width: $tablet) {
+        display: none;
+      }
+    }
 }
 
 .location {
@@ -153,6 +166,18 @@
   &__text--color {
     color: var(--third-prod-bg);
   }
+
+    &__text--none {
+      @media screen and (max-width: 767px) {
+        display: none;
+      }
+    }
+  
+    &__text--hidden {
+      @media screen and (min-width: $tablet) {
+        display: none;
+      }
+    }
 }
 
 
