--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,13 +5,19 @@
             <div class="hero_left-side">
 
                 <h1 class="hero_title">ice cream made with passion</h1>
-                <ul class=" hero_list-buttn ">
-                    <li class="hero_list-item--buttn"><button class="hero_buttn-product" type="button">Products</button>
+
+                <ul class="hero_list--buttons">
+                    <li>
+                        <button type="button" class="hero_button--product">Products</button>
                     </li>
-                    <li class="hero_list-item--buttn"><button class="hero_buttn-made" type="button">How it’s
-                            made?</button>
+                    <li>
+                        <button type="button" class="hero_button--made">How it's made?</button>
                     </li>
+                    
                 </ul>
+                
+
+                
             </div>
 
             <div class="hero_right-side">
