--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,8 +1,6 @@
 .hero{
 
-  background-color: var(--primary-bg);
-//   @extend %section;
-// padding-top: 50px;
+background-color: var(--primary-bg);
 height: 453px;
 
 
@@ -60,45 +58,8 @@ height: 453px;
     align-items: center;
 }
 
-// .hero_button--product{
-   
-//     font-weight: 600;
-//     font-size: 14px;
-//     line-height: 1.29;
-
-//     color: var(--secondary-text);
-//     background-color: transparent;
-//     border: 2px solid var(--btn-bg);
-//     border-radius: 10px;
-
-//     padding: 11px 26px;
-//     cursor: pointer;
-    
-    
-
-//     &hover,
-//     &focus {
-//         border-color:  var(--btn-bg-hover);
-//     }
-// }
-
-
-
-
-
-
-// .hero_buttns {
-   
-
-//     display: flex;
-//     align-items: center;
-
-    
-// }
-
 .hero_button--product {
-    position: absolute;
-    z-index: 2;
+    
     display: block;
     font-weight: 600;
     font-size: 12px;
@@ -107,7 +68,7 @@ height: 453px;
     
     color: var(--secondary-text);
 
-    border: 2px solid #F8D24E;
+    border: 2px solid var(--accent);
     border-radius: 8px;
     background-color: transparent;
     padding: 11px 26px;
@@ -143,8 +104,7 @@ height: 453px;
 
 
 .hero_button--made {
-    position: absolute;
-    z-index: 2;
+    
     top: 106%;
     left: 45%;
     display: block;
@@ -154,7 +114,7 @@ height: 453px;
     text-align: center;
     text-decoration-line: underline;
     
-    color: #F8D24E;
+    color: var(--accent);
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -182,7 +142,7 @@ height: 453px;
         font-size: 14px;
         line-height: 1.21;
         left: 15%;
-        top: 45%;
+        top: 52%;
         
     }
 }
@@ -193,10 +153,10 @@ height: 453px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 95px;
+    margin-bottom: 55px;
 
     @media screen and (min-width: $desktop) {
-        margin-bottom: 150px;
+        margin-bottom: 100px;
     }
 }
 
@@ -288,6 +248,7 @@ height: 453px;
 
 .hero_link {
     cursor: pointer;
+    
 }
 
 .hero_arrow {
@@ -365,8 +326,10 @@ height: 453px;
 
 .hero_image-drops {
     position: absolute;
+    z-index: 0;
     top: 403px;
     left: 0;
+    pointer-events: none;
     
     
     
@@ -375,17 +338,16 @@ height: 453px;
     }
 
     @media screen and (min-width: 1200px) {
-        top: 206px;
-
-        //   top: 250px;
+        top: 206px;        
     }
 }
 
 .hero_image-plate {
     position: absolute;
+    pointer-events: none;
     left: 32px;
     top: 58%;
-    z-index: 1;
+    z-index: 40;
 
     
     
