--- a/src/sass/components/_galery.scss
+++ b/src/sass/components/_galery.scss
@@ -1,27 +1,31 @@
 .galery {
-    padding-bottom: 60px;
+    padding-top: 60px;
+
 }
 
 .galery-picture {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 32px;
     border-radius: 5%;
-    padding: 0 20px;
+    padding: 100px 20px;
 }
 
 @media screen and (min-width: 767px) {
     .galery-picture {
         padding: 0 32px;
-        margin-top: 60px;
-        margin-bottom: 100px;
+        padding-top: 60px;
+            padding-bottom: 100px;
+        // margin-top: 60px;
+        // margin-bottom: 100px;
     }
 }
 
 @media screen and (min-width: 1200px) {
     .galery-picture {
         padding: 0 92px;
-        margin-top: 80px;
-        margin-bottom: 140px;
+        padding-top: 60px;
+            padding-bottom: 140px;
+        // margin-top: 80px;
+        // margin-bottom: 140px;
     }
 }
