--- a/src/sass/components/_galery.scss
+++ b/src/sass/components/_galery.scss
@@ -1,3 +1,28 @@
+.swiper {
+    background-image: linear-gradient(to bottom,
+            #84a178 15%,
+            #84a178 35%,
+            rgba(132, 161, 120, 0) 35%);
+
+    @media screen and (min-width: 767px) {
+        background-image: linear-gradient(to bottom,
+                #84a178 15%,
+                #84a178 40%,
+                rgba(132, 161, 120, 0) 40%);
+    }
+
+    @media screen and (min-width: 1200px) {
+        background-image: linear-gradient(to bottom,
+                #84a178 15%,
+                #84a178 25%,
+                rgba(132, 161, 120, 0) 25%);
+    }
+}
+
+.swiper-slide {
+    padding: 0 20px;
+}
+
 .galery {
     padding-top: 60px;
 
