--- a/src/partials/advanteges.html
+++ b/src/partials/advanteges.html
@@ -1,19 +1,25 @@
 <section id="advanteges" class="advantages">
-    <div class="container">
-        <h2 class="visually-hidden">Our advantages</h2>
-<ul class="advantages-list">
-    <li class="advantages-item cow-icon">
+  <div class="container">
+    <h2 class="visually-hidden">Our advantages</h2>
+    <ul class="advantages-list">
+      <li class="advantages-item cow-icon">
         <h3 class="advantages-titel">721</h3>
-        <p class="advantages-text">Aliquam ac dui vel dui vulputaпte consectetur. Mauris massa.</p>
-    </li>
-    <li class="advantages-item weight-icon">
+        <p class="advantages-text">
+          Aliquam ac dui vel dui vulputaпte consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages-item weight-icon">
         <h3 class="advantages-titel">16kg</h3>
-        <p class="advantages-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-    </li>
-    <li class="advantages-item ice-crema-icon">
+        <p class="advantages-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+      <li class="advantages-item ice-crema-icon">
         <h3 class="advantages-titel">84</h3>
-        <p class="advantages-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
-    </li>
-</ul>
-    </div>
+        <p class="advantages-text">
+          Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+        </p>
+      </li>
+    </ul>
+  </div>
 </section>
