--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,11 +13,11 @@
                     <li>
                         <button type="button" class="hero_button--made">How it's made?</button>
                     </li>
-                    
-                </ul>
-                
 
-                
+                </ul>
+
+
+
             </div>
 
             <div class="hero_right-side">
@@ -53,7 +53,7 @@
                     incididunt ut labore
                     et
                 </p>
-                <a class="hero_link link" href="#" target="_blank" rel="nofollow noopener noreferrer">
+                <a class="hero_link" href="#" target="_blank" rel="nofollow noopener noreferrer">
                     <svg class="hero_arrow" width="40" height="40">
                         <use href="./images/icons.svg#arrow"></use>
                     </svg>
@@ -64,28 +64,34 @@
 
         <ul class="hero_list-images">
             <li>
-               
+
 
                 <picture>
-                    <source srcset="./images/ice-cream/mobile_ice-cream@1x.png 177w, ./images/ice-cream/mobile_ice-cream@2x.png 354w"
+                    <source
+                        srcset="./images/ice-cream/mobile_ice-cream@1x.png 177w, ./images/ice-cream/mobile_ice-cream@2x.png 354w"
                         media="(max-width: 767px)" sizes="(min-width: 320px) 177px, 100vw">
-                    <source srcset="./images/ice-cream/tablet_ice-cream@1x.png 268w, ./images/ice-cream/tablet_ice-cream@2x.png 536w"
+                    <source
+                        srcset="./images/ice-cream/tablet_ice-cream@1x.png 268w, ./images/ice-cream/tablet_ice-cream@2x.png 536w"
                         media="(max-width: 1199px)" sizes="(min-width: 768px) 268px, 100vw">
-                    <source srcset="./images/ice-cream/desktop_ice-cream@1x.png 456px, ./images/ice-cream/desktop_ice-cream@2x.png 912w"
+                    <source
+                        srcset="./images/ice-cream/desktop_ice-cream@1x.png 456px, ./images/ice-cream/desktop_ice-cream@2x.png 912w"
                         media="(min-width: 1200px)" sizes="(min-width: 1200px) 456px, 100vw">
                     <img src="./images/hero/dots/mobile-dots@1x.png" alt="icecream" class="hero_image-icecream">
                 </picture>
             </li>
             <li>
-                
+
 
                 <picture>
-                    <source srcset="./images/hero/dots/mobile-dots@1x.png 320w, ./images/hero/dots/mobile-dots@2x.png 640w" media="(max-width: 767px)"
-                        sizes="(min-width: 320px) 320px, 100vw">
-                    <source srcset="./images/hero/dots/tablet-dots@1x.png 768w, ./images/hero/dots/tablet-dots@2x.png 1536w" media="(max-width: 1199px)"
-                        sizes="(min-width: 768px) 768px, 100vw">
-                    <source srcset="./images/hero/dots/desktop-dots@1x.png 1200w, ./images/hero/dots/desktop-dots@2x.png 2400w" media="(min-width: 1200px)"
-                        sizes="(min-width: 1200px) 1200px, 100vw">
+                    <source
+                        srcset="./images/hero/dots/mobile-dots@1x.png 320w, ./images/hero/dots/mobile-dots@2x.png 640w"
+                        media="(max-width: 767px)" sizes="(min-width: 320px) 320px, 100vw">
+                    <source
+                        srcset="./images/hero/dots/tablet-dots@1x.png 768w, ./images/hero/dots/tablet-dots@2x.png 1536w"
+                        media="(max-width: 1199px)" sizes="(min-width: 768px) 768px, 100vw">
+                    <source
+                        srcset="./images/hero/dots/desktop-dots@1x.png 1200w, ./images/hero/dots/desktop-dots@2x.png 2400w"
+                        media="(min-width: 1200px)" sizes="(min-width: 1200px) 1200px, 100vw">
                     <img src="./images/hero/dots/mobile-dots@1x.png" alt="dots" class="hero_image-drops">
                 </picture>
             </li>
