--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -1,15 +1,15 @@
-<!-- <a href="#" class="js-open-modal" data-modal="1">Открыть окно 1</a>
+<a href="#" class="js-open-modal" data-modal="1">Открыть окно 1</a>
 <a href="#" class="js-open-modal" data-modal="2">Открыть окно 2</a>
 <a href="#" class="js-open-modal" data-modal="3">Открыть окно 3</a>
 <a href="#" class="js-open-modal" data-modal="4">Открыть окно 4</a>
-<a href="#" class="js-open-modal" data-modal="5">Открыть окно 5</a> -->
+<a href="#" class="js-open-modal" data-modal="5">Открыть окно 5</a>
 
 
 <!--==============
         MODAL 1 
     ==============-->
 
-<!-- <div class="buy__modal modal" data-modal="1">
+<div class="buy__modal modal" data-modal="1">
     <svg class="modal__cross js-modal-close" width="24" height="24">
         <use href="../src/images/icons.svg#modal-close"></use>
     </svg>
@@ -70,13 +70,13 @@
             <span>Submit</span>
         </button>
     </form>
-</div> -->
+</div>
 
 <!--==============
     MODAL 2 
 ==============-->
 
-<!-- <div class="about__modal modal" data-modal="2">
+<div class="about__modal modal" data-modal="2">
     <svg class="modal__cross js-modal-close" width="24" height="24">
         <use href="../src/images/icons.svg#modal-close"></use>
     </svg>
@@ -164,13 +164,13 @@
             <span>Submit</span>
         </button>
     </form>
-</div> -->
+</div>
 
 <!--==============
     MODAL 3 
 ==============-->
 
-<!-- <div class="read__modal modal" data-modal="3">
+<div class="read__modal modal" data-modal="3">
     <svg class="modal__cross js-modal-close" width="24" height="24">
         <use href="../src/images/icons.svg#modal-close"></use>
     </svg>
@@ -183,13 +183,13 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
     </p>
-</div> -->
+</div>
 
 <!--==============
     MODAL 4 
 ==============-->
 
-<!-- <div class="local__modal modal" data-modal="4">
+<div class="local__modal modal" data-modal="4">
     <svg class="modal__cross js-modal-close" width="24" height="24">
         <use href="../src/images/icons.svg#modal-close"></use>
     </svg>
@@ -200,12 +200,12 @@
         referrerpolicy="no-referrer-when-downgrade"></iframe>
     <a class="local__link link" href="https://goo.gl/maps/mZwQENBwmgegPtJZ8" target="_blank"
         rel="nofollow noopener noreferre">Open map</a>
-</div> -->
+</div>
 
 <!--==============
     MODAL 5 
 ==============-->
-<!-- 
+
 <div class="franchise__modal modal" data-modal="5">
     <svg class="modal__cross js-modal-close" width="24" height="24">
         <use href="../src/images/icons.svg#modal-close"></use>
@@ -242,8 +242,8 @@
             <span>Submit</span>
         </button>
     </form>
-</div> -->
+</div>
 
 
 <!-- Подложка под модальным окном -->
-<!-- <div class="overlay js-overlay-modal"></div> -->
+<div class="overlay js-overlay-modal"></div>
