--- a/src/sass/components/_galery.scss
+++ b/src/sass/components/_galery.scss
@@ -38,7 +38,6 @@
 @media screen and (min-width: 767px) {
     .galery-picture {
         padding: 0 32px;
-        padding-top: 60px;
             padding-bottom: 100px;
         // margin-top: 60px;
         // margin-bottom: 100px;
@@ -47,9 +46,7 @@
 
 @media screen and (min-width: 1200px) {
     .galery-picture {
-        padding: 0 92px;
-        padding-top: 60px;
-            padding-bottom: 140px;
+        padding: 0 92px 140px 92px;
         // margin-top: 80px;
         // margin-bottom: 140px;
     }
