--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,10 +8,10 @@
 
                 <ul class="hero_list--buttons">
                     <li>
-                        <button type="button" class="hero_button--product">Products</button>
+                        <a href="#products" class="hero_button--product">Products</a>
                     </li>
                     <li>
-                        <button type="button" class="hero_button--made">How it's made?</button>
+                        <a href="#about" class="hero_button--made">How it's made?</a>
                     </li>
 
                 </ul>
