--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -1,8 +1,8 @@
-<a href="#" class="js-open-modal" data-modal="1">Открыть окно 1</a>
-<a href="#" class="js-open-modal" data-modal="2">Открыть окно 2</a>
+<!-- <a href="#" class="js-open-modal" data-modal="1">Открыть окно 1</a> -->
+<!-- <a href="#" class="js-open-modal" data-modal="2">Открыть окно 2</a>
 <a href="#" class="js-open-modal" data-modal="3">Открыть окно 3</a>
 <a href="#" class="js-open-modal" data-modal="4">Открыть окно 4</a>
-<a href="#" class="js-open-modal" data-modal="5">Открыть окно 5</a>
+<a href="#" class="js-open-modal" data-modal="5">Открыть окно 5</a> -->
 
 
 <!--==============
@@ -11,7 +11,7 @@
 
 <div class="buy__modal modal" data-modal="1">
     <svg class="modal__cross js-modal-close" width="24" height="24">
-        <use href="../src/images/icons.svg#modal-close"></use>
+        <use href="./images/icons.svg#modal-close"></use>
     </svg>
     <b class="buy__subject after">Buy now</b>
     <div class="buy__box">
@@ -24,7 +24,7 @@
                     </label>
                 </div>
                 <div class="box__two">
-                    <img class="box__img" src="" alt="ice cream">
+                    <img class="box__img" src="./images/modal/buy-now/ice-cream@1x.png" alt="ice cream">
                 </div>
             </li>
             <li class="buy__item">
@@ -35,7 +35,7 @@
                     </label>
                 </div>
                 <div class="box__four">
-                    <img class="box__img" src="" alt="ice coffee">
+                    <img class="box__img" src="./images/modal/buy-now/ice-coffee@1x.png" alt="ice coffee">
                 </div>
             </li>
             <li class="buy__item">
@@ -46,7 +46,7 @@
                     </label>
                 </div>
                 <div class="box__six">
-                    <img class="box__img" src="" alt="milkshake">
+                    <img class="box__img" src="./images/modal/buy-now/milkshake@1x.png" alt="milkshake">
                 </div>
             </li>
         </ul>
@@ -82,7 +82,7 @@
     </svg>
     <b class="about__subject after">Chololate icecream</b>
     <div class="about__box">
-        <img class="about__img" src="" alt="Chololate icecream">
+        <img class="about__img" src="./images/modal/choco-ice/choco-ice@1x.png" alt="Chololate icecream">
     </div>
     <div class="about__group">
         <ul class="group__list">
