--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -17,7 +17,7 @@
                 <p class="products-list__text">Soft ice cream with a delicate taste. Made with milk, cream, sugar
                     and natural stabilizer
                 </p>
-                <button type="button" class="products-list__button">
+                <button type="button" class="products-list__button js-open-modal" data-modal="2">
                     <svg width="40" height="16">
                         <use href="./images/icons.svg#arrow-black"></use>
                     </svg>
@@ -38,7 +38,7 @@
                     without the use of
                     preservatives and flavor enhancers
                 </p>
-                <button type="button" class="products-list__button">
+                <button type="button" class="products-list__button js-open-modal" data-modal="2">
                     <svg width="40" height="16">
                         <use href="./images/icons.svg#arrow-black"></use>
                     </svg>
@@ -59,7 +59,7 @@
                     fruits, berries and other
                     sweets of your choice
                 </p>
-                <button type="button" class="products-list__button">
+                <button type="button" class="products-list__button js-open-modal" data-modal="2">
                     <svg width="40" height="16">
                         <use href="./images/icons.svg#arrow-black"></use>
                     </svg>
