--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -10,3 +10,18 @@
     line-height: decimal-round($lh / $fs);
     letter-spacing: $ls;
 }
+
+// @mixin fonts($fs, $lh, $fw: false, $ls: 0.02em) {
+//     @if $fw {
+//         font-weight: $fw;
+//     }
+
+//     font-size: $fs;
+
+//     @if $lh and $fs {
+//         $lhToMultiplier: calc($lh / $fs);
+//         line-height: decimal-round($lhToMultiplier);
+//     }
+
+//     letter-spacing: $ls;
+// }
