--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section id="contacts" class="contacts">
+<section class="contacts">
     <div class="container">
         <h2 class="visually-hidden">representation</h2>
         <ul class="contacts__list">
@@ -7,25 +7,27 @@
                 <div class="location">
                     <p class="location__text">Chicago</p>
                     <span class="location__text location__text--color location__text--none">10340 Ridgeland Ave, Chicago
-                        Ridge, IL 60415,
-                        USA</span>
+                        Ridge, IL 60415, USA</span>
                     <span class="location__text location__text--color location__text--hidden">10340 Ridgeland Ave,
-                        Chicago&nbspRidge, IL
-                        60415, USA</span>
+                        Chicago&nbsp;Ridge, IL 60415, USA</span>
                 </div>
                 <ul class="timetable">
                     <li class="timetable__item">
                         <p class="timetable__text">Monday - Friday</p>
-                        <time class="timetable__text timetable__text--color">06:00 AM - 10:00 PM</time>
+                        <p class="timetable__text timetable__text--color">
+                            <time>06:00</time> AM -<time>10:00</time> PM
+                        </p>
                     </li>
                     <li class="timetable__item">
                         <p class="timetable__text">Saturday - Sunday</p>
-                        <time class="timetable__text timetable__text--color">08:00 AM - 16:00 PM</time>
+                        <p class="timetable__text timetable__text--color">
+                            <time>08:00</time> AM - <time>16:00</time> PM
+                        </p>
                     </li>
                 </ul>
                 <ul class="liaise">
                     <li class="liaise__item">
-                        <a href="tel:+61(0) 383 766 284" class="liaise__tel">+61(0) 383 766 284</a>
+                        <a href="tel:+61(0)383766284" class="liaise__tel">+61(0) 383 766 284</a>
                     </li>
                     <li class="liaise__item">
                         <a href="mailto:noreply@envato.com" class="liaise__mail">noreply@envato.com</a>
@@ -47,16 +49,20 @@
                 <ul class="timetable">
                     <li class="timetable__item">
                         <p class="timetable__text">Monday - Friday</p>
-                        <time class="timetable__text timetable__text--color">06:00 AM - 10:00 PM</time>
+                        <p class="timetable__text timetable__text--color">
+                            <time>06:00</time> AM -<time>10:00</time> PM
+                        </p>
                     </li>
                     <li class="timetable__item">
                         <p class="timetable__text">Saturday - Sunday</p>
-                        <time class="timetable__text timetable__text--color">08:00 AM - 16:00 PM</time>
+                        <p class="timetable__text timetable__text--color">
+                            <time>08:00</time> AM - <time>16:00</time> PM
+                        </p>
                     </li>
                 </ul>
                 <ul class="liaise">
                     <li class="liaise__item">
-                        <a href="tel:+61(0) 383 766 284" class="liaise__tel">+61(0) 383 766 284</a>
+                        <a href="tel:+61(0)383766284" class="liaise__tel">+61(0) 383 766 284</a>
                     </li>
                     <li class="liaise__item">
                         <a href="mailto:noreply@envato.com" class="liaise__mail">noreply@envato.com</a>
@@ -72,16 +78,20 @@
                 <ul class="timetable">
                     <li class="timetable__item">
                         <p class="timetable__text">Monday - Friday</p>
-                        <time class="timetable__text timetable__text--color">06:00 AM - 10:00 PM</time>
+                        <p class="timetable__text timetable__text--color">
+                            <time>06:00</time> AM - <time>10:00</time> PM
+                        </p>
                     </li>
                     <li class="timetable__item">
                         <p class="timetable__text">Saturday - Sunday</p>
-                        <time class="timetable__text timetable__text--color">08:00 AM - 16:00 PM</time>
+                        <p class="timetable__text timetable__text--color">
+                            <time>08:00</time> AM - <time>16:00</time> PM
+                        </p>
                     </li>
                 </ul>
                 <ul class="liaise">
                     <li class="liaise__item">
-                        <a href="tel:+61(0) 383 766 284" class="liaise__tel">+61(0) 383 766 284</a>
+                        <a href="tel:+61(0)383766284" class="liaise__tel">+61(0) 383 766 284</a>
                     </li>
                     <li class="liaise__item">
                         <a href="mailto:noreply@envato.com" class="liaise__mail">noreply@envato.com</a>
