--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -34,7 +34,7 @@
         </svg>
       </button>
 
-      <button class="header_button header_button--geometry" type="button">
+      <button class="header_button header_button--geometry js-open-modal" type="button" data-modal="1">
         Buy now
         <svg class="header_button__icon" width="6" height="9">
           <use href="./images/icons.svg#button_vector"></use>
