--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -198,7 +198,7 @@
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.057873270101!2d-73.95692268459621!3d40.67269377933625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25b9e1735b38f%3A0xb5fe454b88e9c2c0!2zNzI2IFN0ZXJsaW5nIFBsLCBCcm9va2x5biwgTlkgMTEyMTYsINCh0L_QvtC70YPRh9C10L3RliDQqNGC0LDRgtC4INCQ0LzQtdGA0LjQutC4!5e0!3m2!1suk!2sua!4v1671222358146!5m2!1suk!2sua"
         width="448" height="260" style="border: 0" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <a class="local__link link" href="https://goo.gl/maps/mZwQENBwmgegPtJZ8" target="_blank"
+    <a class="local__link" href="https://goo.gl/maps/mZwQENBwmgegPtJZ8" target="_blank"
         rel="nofollow noopener noreferre">Open map</a>
 </div>
 
