--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -5,32 +5,23 @@
     <ul class="list about-list">
       <li class="about-list__item about-list__item-first">
         <div class="about-list__picture">
-          <img
-            srcset="
+          <img srcset="
               ./images/about/сow_lg@1x.webp 490w,
               ./images/about/сow_lg@2x.webp 980w,
               ./images/about/сow_md@1x.webp 330w,
               ./images/about/сow_md@2x.webp 660w,
               ./images/about/сow_sm@1x.webp 279w,
               ./images/about/сow_sm@2x.webp 558w
-            "
-            type="image/webp"
-            srcset="
+            " type="image/webp" srcset="
               ./images/about/сow_lg@1x.png 490w,
               ./images/about/сow_lg@2x.png 980w,
               ./images/about/сow_md@1x.png 330w,
               ./images/about/сow_md@2x.png 660w,
               ./images/about/сow_sm@1x.png 279w,
               ./images/about/сow_sm@2x.png 558w
-            "
-            type="image/jpg"
+            " type="image/jpg"
             sizes="(min-width: 1200px) 490px, (min-width: 768px) 330px, (min-width: 320px) 279px, 100vw"
-            src="./images/about/сow_lg@1x.png"
-            width="490"
-            height="490"
-            alt="сow"
-            loading="lazy"
-          />
+            src="./images/about/сow_lg@1x.png" width="490" height="490" alt="сow" loading="lazy" />
         </div>
       </li>
       <li class="about-list__item about-list__item-second">
@@ -54,11 +45,7 @@
             <p>This is enough to choose ice cream and coffee for any mood!</p>
           </li>
         </ul>
-        <button
-          type="button"
-          class="about-btm button js-open-modal"
-          data-modal="3"
-        >
+        <button type="button" class="about-btm button js-open-modal" data-modal="3">
           Read more
         </button>
       </li>
