--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -2,22 +2,28 @@ b {
     font-family: 'Montserrat', sans-serif;
  }
 
- input::placeholder, textarea::placeholder {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(20 / 14);
-    color: #131313;
-}
-
 textarea {
-    min-width: 368px;
-    min-height: 84px;
+    min-width: 224px;
+    min-height: 64px;
     padding: 11px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(17 / 12);
+    color: #131313;
+
 
     background-color: rgba(248, 210, 78, 0.1);
     border: 1px solid #84A178;
     border-radius: 10px;
     resize: none;
+
+    @media screen  and (min-width: $tablet) {
+      min-width: 368px;
+      min-height: 84px;
+      font-size: 14px;
+      line-height: calc(20 / 14);
+}
 }
 
 
@@ -25,7 +31,6 @@ textarea {
 /* Стили для подложки */
 
 .overlay {
-   
     opacity: 0;
     visibility: hidden;
     
@@ -35,7 +40,7 @@ textarea {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, .5);
-    z-index: 20;
+    z-index: 1050;
     transition: .3s all;
  }
  
@@ -50,7 +55,7 @@ textarea {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 30; 
+    z-index: 1100; 
     
     background-color: #FCFCFC;
     border: 2px solid #F8D24E;
@@ -64,11 +69,24 @@ textarea {
  }
  
  .modal__cross {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-    fill: #131313;
-    cursor: pointer;
+   position: absolute;
+   top: 12px;
+   right: 12px;
+   width: 20px;
+   height: 20px;
+   fill: #131313;
+   cursor: pointer;
+   border-radius: 50%;
+   border: 1px solid rgba(0, 0, 0, 0);
+
+    @media screen  and (min-width: $tablet) {
+        width: 24px;
+        height: 24px;
+   }
+ }
+
+ .modal__cross:focus {
+   border: 1px solid rgba(0, 0, 0, 0);
  }
 
 
@@ -78,27 +96,50 @@ textarea {
     display: flex;
     font-family: 'Seymour One', sans-serif;    
     font-weight: 400;
-    font-size: 20px;
-    line-height: calc(28 / 20);
+    font-size: 16px;
+    line-height: calc(24 / 16);
     justify-content: center;
     color: var(--secondary-text);
+
+    @media screen  and (min-width: $tablet) {
+      font-size: 20px;
+      line-height: calc(28 / 20);
+   }
  }
 
  .input {
-    min-width: 368px;
-    min-height: 42px;
-    padding: 11px 152px 11px 16px;
+    min-width: 224px;
+    min-height: 32px;
+    padding: 11px;
     background-color: rgba(248, 210, 78, 0.1);
     border: 1px solid #84A178;
     border-radius: 10px;
+
+    font-weight: 400;
+    font-size: 12px;
+    line-height: calc(17 / 12);
+    color: #131313;
+
+    @media screen  and (min-width: $tablet) {
+      min-width: 368px;
+      min-height: 42px;
+      padding: 11px 152px 11px 16px;
+
+      font-size: 14px;
+      line-height: calc(20 / 14);
+   }
  }
   
   .input:not(:placeholder-shown):required:invalid {
     border-color: red;
   }
 
+  .input:not(:placeholder-shown):required:valid {
+   border-color: green;
+ }
+
  .btn--modal {
-    width: 121px;
+    width: 132px;
     height: 42px;
     padding: 12px 34px;
     font-weight: 600;
@@ -109,6 +150,10 @@ textarea {
     background-color: #F8D24E;
     border-radius: 10px;
     border: none;
+
+    @media screen  and (min-width: $tablet) {
+      width: 121px;
+   }
  }
 
  .btn--modal:hover, .btn--modal:focus {
@@ -125,18 +170,38 @@ textarea {
 
  .buy__modal {
     position: absolute;
-    min-width: 568px;
-    min-height: 644px;
-    padding: 32px 54px;
+    max-width: 280px;
+    min-height: 991px;
+    padding: 28px;
+
+    @media screen  and (min-width: $tablet) {
+      max-width: 568px;
+      min-height: 644px;
+      padding: 32px 54px;
+   }
  }
 
 
  .box__list {
-    display: flex;
-    justify-content: center;
-    gap: 32px;
-    margin-top: 100px;
-    margin-bottom: 40px;
+   @media screen  and (max-width: 767px) {
+      margin-top: 72px;
+      margin-left: 46px;
+      margin-bottom: 31px;
+   }
+
+    @media screen  and (min-width: $tablet) {
+      display: flex;
+      justify-content: center;
+      gap: 32px;
+      margin-top: 100px;
+      margin-bottom: 40px;
+   }
+ }
+
+ .box__item {
+   @media screen  and (max-width: 767px) {
+      margin-top: 83px;
+   }
  }
 
  .box__one {
@@ -181,6 +246,10 @@ textarea {
    background-color: #96AF8C;
 }
 
+.box__item:focus-within .label__span {
+   background-color: #96AF8C;
+ }
+
 .box__two {
    position: relative;
    top: -56px;
@@ -220,6 +289,13 @@ textarea {
    background-color: #EFD478;
 }
 
+.label__span--three {
+   border: 2px solid #EFD478;
+   .box__item:focus-within & {
+     background-color: #EFD478;
+   }
+ }
+
 .box__four {
    position: relative;
    top: -56px;
@@ -254,6 +330,13 @@ textarea {
     background-color: #D6936D;
  } 
 
+ .label__span--five {
+   border: 2px solid #D6936D;
+   .box__item:focus-within & {
+     background-color: #D6936D;
+   }
+ }
+
  .box__six {
     position: relative;
     top: -56px;
@@ -268,23 +351,41 @@ textarea {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 368px;
-    min-height: 274px;
+    min-width: 224px;
+    min-height: 221px;
+
+    @media screen  and (min-width: $tablet) {
+      min-width: 368px;
+      min-height: 274px;
+   }
 }
 
 .buy__input {
-    margin-bottom: 16px;
+    margin-bottom: 12px;
+
+    @media screen  and (min-width: $tablet) {
+      margin-bottom: 16px;
+   }
 }
 
 .buy__textarea {
-    width: 368px;
+    width: 224px;
+    height: 65px;
+
+    @media screen  and (min-width: $tablet) {
+      width: 368px;
     height: 84px;
+   }
 }
 
 .buy__btn {
-    margin-top: 32px;
+    margin-top: 26px;
     margin-left: auto;
     margin-right: auto;
+
+    @media screen  and (min-width: $tablet) {
+      margin-top: 32px;
+   }
 }
 
 
@@ -295,20 +396,41 @@ textarea {
     .about__modal {
         position: absolute;
         top: 1450;
-        min-width: 568px;
-        max-height: 996px;
-        padding: 32px 40px;
+        max-width: 280px;
+        max-height: 968px;
+        padding: 28px 20px;
+
+        @media screen and (min-width: $tablet) {
+         top: 1450;
+         max-width: 568px;
+         max-height: 996px;
+         padding: 32px 40px;
+      }
+    }
+
+    .about__subject {
+      @media screen  and (max-width: 767px) {
+         text-align: center;
+      }
     }
 
     .about__box {
         width: 132px;
         height: 132px;
-        margin-top: 32px;
-        margin-bottom: 25px;
-        margin-left: 178px;
+        margin-top: 27px;
+        margin-bottom: 22px;
+        margin-left: auto;
+        margin-right: auto;
         border-radius: 50%;
         background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
         box-shadow: 0px 5.26027px 19.726px rgba(10, 136, 23, 0.25);
+
+        @media screen  and (min-width: $tablet) {
+         margin-top: 32px;
+         margin-bottom: 25px;
+         margin-left: auto;
+         margin-right: auto;
+      }
     }
 
     .about__img {
@@ -318,53 +440,111 @@ textarea {
 
     .group__list {
         display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-bottom: 48px;
+        gap: 8px;
+        margin-bottom: 40px;
+
+        @media screen  and (min-width: $tablet) {
+         justify-content: center;
+         gap: 20px;
+         margin-bottom: 48px;
+      }
      }
 
      .group__item {
-        width: 65px;
-        height: 90px;
+        width: 53px;
+        height: 72px;
+
+        @media screen  and (min-width: $tablet) {
+         width: 65px;
+         height: 90px;
+      }
      }
     
      .one {
-        width: 65px;
-        height: 90px;
+        width: 53px;
+        height: 72px;
         border: 2px solid #9CBE8F;
         border-radius: 40px;
+
+        @media screen  and (min-width: $tablet) {
+         width: 65px;
+         height: 90px;
+      }
      }
      
      .two {
-        padding-top: 60px;
+        padding-top: 52px;
+        padding-bottom: 8px;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: calc(12 / 10);
+        letter-spacing: 0em;
+        text-align: center;
+        color: var(--secondary-text);
+
+        @media screen  and (min-width: $tablet) {
+         padding-top: 60px;
         padding-bottom: 15px;
         font-weight: 400;
         font-size: 12px;
         line-height: calc(15 / 12);
         letter-spacing: 0em;
+      }
+     }
+
+     .two--none {
+      @media screen  and (max-width: 767px) {
+         display: none;
+      }
+     }
+
+     .two--mobile {
+        padding-top: 52px;
+        padding-bottom: 8px;
+        font-weight: 400;
+        font-size: 10px;
+        line-height: calc(12 / 10);
+        letter-spacing: 0em;
         text-align: center;
         color: var(--secondary-text);
+
+        @media screen  and (min-width: $tablet) {
+         display: none;
+      }
      }
     
      .three {
         position: relative;
-        top: -89px;
-        left: 6px;
-        width: 53px;
-        height: 53px;
+        top: -71px;
+        left: 5px;
+        width: 43px;
+        height: 43px;
         border-radius: 50%;
-        background: #9CBE8F;
+        background-color: #9CBE8F;
         border: 2px solid #9CBE8F;
         box-shadow: 0px 6px 20px rgba(10, 136, 23, 0.25);
+
+        @media screen  and (min-width: $tablet) {
+         top: -89px;
+         left: 6px;
+         width: 53px;
+         height: 53px;
+      }
      }
     
      .four {
-        padding-top: 12px;
+        padding-top: 7px;
         font-weight: 500;
-        font-size: 12px;
-        line-height: calc(28 / 12);
-        text-align: center;
+        font-size: 10px;
+        line-height: calc(28 / 10);
+        text-align: center;   
         color: var(--secondary-text);
+
+        @media screen  and (min-width: $tablet) {
+         padding-top: 12px;
+         font-size: 12px;
+         line-height: calc(28 / 12);
+      }
      }
 
     .ingredients__text {
@@ -377,13 +557,18 @@ textarea {
     }
 
     .ngredients__list {
-        margin-bottom: 48px;
+        margin-bottom: 40px;
       color: var(--secondary-text);
+
+      @media screen  and (min-width: $tablet) {
+         margin-bottom: 48px;
+      }
     }
 
     .ingredients__item {
         display: flex;
         align-items: baseline;
+      
     }
 
     .ingredients__item:not(:last-child) {
@@ -404,8 +589,13 @@ textarea {
         display: flex;
         flex-direction: column;
         text-align: center;
-        min-width: 368px;
+        min-width: 224px;
         min-height: 200px;
+
+        @media screen  and (min-width: $tablet) {
+         min-width: 368px;
+         min-height: 200px;
+      }
     }
 
     .about__input {
@@ -413,9 +603,13 @@ textarea {
     }
 
     .about__btn {
-        margin-top: 32px;
+        margin-top: 24px;
         margin-left: auto;
         margin-right: auto;
+
+        @media screen  and (min-width: $tablet) {
+         margin-top: 32px;
+      }
     }
 
 /* ===============
@@ -449,14 +643,35 @@ textarea {
     .local__modal {
     display: flex;
     flex-direction: column;
-    max-width: 568px;
-    max-height: 458px;
-    padding: 32px 60px;
-    gap: 32px;
+    max-width: 280px;
+    max-height: 365px;
+    padding: 28px;
+
+    @media screen  and (min-width: $tablet) {
+      max-width: 568px;
+      max-height: 458px;
+      padding: 32px 60px;
+      gap: 32px;
+   }
+    }
+
+    .local__subject {
+
+      @media screen  and (max-width: 767px) {
+         font-size: 16px;
+         line-height: calc(24 / 16);
+      }
     }
 
     .local__iframe {
-        border-radius: 10px;
+      margin-top: 20px;
+      margin-bottom: 24px;
+      border-radius: 10px;
+      @media screen  and (max-width: 767px) {
+         margin-top: 20px;
+         width: 224px;
+         height: 199px;
+      }
     }
 
     .local__link {
@@ -469,12 +684,19 @@ textarea {
       font-weight: 600;
       font-size: 14px;
       line-height: calc(17 / 14);
-      justify-content: center;
+      justify-content: center;   
       text-align: center;
       text-decoration: none;
       color: #131313;
       background-color: #F8D24E;
       border-radius: 10px;
+
+      @media screen  and (min-width: $tablet) {
+         width: 134px;
+         padding: 12px 32px;
+         font-size: 12px;
+         line-height: calc(15 / 12);
+      }
    }
   
    .local__link:hover, .local__link:focus {
@@ -490,37 +712,69 @@ textarea {
     ============== */
 
     .franchise__form {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    min-width: 568px;
-    min-height: 668px;
-    padding: 32px 60px;
-    color: var(--secondary-text);
-    }
+      display: flex;
+  flex-direction: column;
+  text-align: center;
+  max-width: 280px;
+  min-height: 674px;
+  padding: 28px;
 
-    .franchise__subject {
-        max-width: 332px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+  @media screen  and (min-width: $tablet) {
+   max-width: 568px;
+   min-height: 668px;
+   padding: 32px 60px;
+}
 
-    .franchise__text {
-        max-width: 448px;
-        margin-top: 24px;
-        margin-bottom: 32px;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: calc(22 / 16);
-        text-align: left;
-    }
+  }
 
-    .franchise__input {
-        margin-bottom: 16px;
-    }
+  .franchise__subject {
+      @media screen  and (max-width: 767px) {
+         max-width: 221px;
 
-    .franchise__btn {
-        margin-top: 32px;
-        margin-left: auto;
-        margin-right: auto;
-    }
+         text-align: left;
+      }
+
+      @media screen  and (min-width: $tablet) {
+         max-width: 332px;
+         margin-left: auto;
+         margin-right: auto;
+      }
+  }
+
+  .franchise__text {
+      max-width: 448px;
+      margin-top: 20px;
+      margin-bottom: 24px;
+      font-family: 'Montserrat';
+      font-weight: 400;
+      font-size: 14px;  
+      line-height: calc(20 / 14);
+      text-align: left;
+      color: var(--secondary-text);
+
+      @media screen  and (min-width: $tablet) {
+      max-width: 448px;
+      margin-top: 24px;
+      margin-bottom: 32px;
+      font-size: 16px;
+      line-height: calc(22 / 16);
+      }
+  }
+
+  .franchise__input {
+      margin-bottom: 12px;
+
+      @media screen  and (min-width: $tablet) {
+         margin-bottom: 16px;
+      }
+  }
+
+  .franchise__btn {
+      margin-top: 24px;
+      margin-left: auto;
+      margin-right: auto;
+
+      @media screen  and (min-width: $tablet) {
+         margin-top: 32px;
+      }
+  }
