--- a/src/sass/components/_modal-window.scss
+++ b/src/sass/components/_modal-window.scss
@@ -10,7 +10,7 @@ textarea {
     font-weight: 400;
     font-size: 12px;
     line-height: calc(17 / 12);
-    color: #131313;
+    color: var(--secondary-text);
 
 
     background-color: rgba(248, 210, 78, 0.1);
