--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -40,3 +40,15 @@ li {
 a {
     text-decoration: none;
 }
+
+.anim-show {
+    transform: translate(120%, 0px);
+    opacity: 0;
+    transition: all 0.8s ease 0s;
+}
+
+._anim-show._active,
+._active ._anim-show {
+    transform: translate(0px, 0px);
+    opacity: 1;
+}
