--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <section class="header" id="header">
   <div class="container">
     <div class="header__nav">
-      <a class="logo" href="#">
+      <a class="logo logo_bounce" href="./index.html" target="_blank" rel="norefferer noopener nofollow">
         <img srcset="
             ./images/logo/desktop_logo@2x.webp 120w,
             ./images/logo/desktop_logo@1x.webp  60w,
@@ -53,7 +53,7 @@
     </svg>
   </button>
 
-  <a class="logo" href="#">
+  <a class="logo" href="#" target="_blank" rel="norefferer noopener nofollow">
     <img srcset="
         ./images/logo/tablet_logo@2x.webp 96w,
         ./images/logo/tablet_logo@1x.webp 48w,
@@ -65,7 +65,7 @@
 
   <ul class="mobile-menu">
     <li class="mobile-menu__item">
-      <a href="/index" class="mobile-menu__link">Home</a>
+      <a href="./index.html" class="mobile-menu__link">Home</a>
     </li>
     <li class="mobile-menu__item">
       <a href="#about" class="mobile-menu__link">How it’s made?</a>
@@ -74,7 +74,7 @@
       <a href="#products" class="mobile-menu__link">Our products</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="./contacts" class="mobile-menu__link">Contact</a>
+      <a href="#contacts" class="mobile-menu__link">Contact</a>
     </li>
   </ul>
 
