--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -53,7 +53,7 @@
                     incididunt ut labore
                     et
                 </p>
-                <a class="hero_link" href="#" target="_blank" rel="nofollow noopener noreferrer">
+                <a class="hero_link" href="#products">
                     <svg class="hero_arrow" width="40" height="40">
                         <use href="./images/icons.svg#arrow"></use>
                     </svg>
