--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -189,7 +189,7 @@
   <div class="read__modal modal" data-modal="3">
     <b class="read__subject after">How it’s made&#63;</b>
     <iframe class="read__iframe" width="448" height="205" src="https://www.youtube.com/embed/7gJIyHnD710?start=1"
-      title="YouTube video player" frameborder="0"
+      title="YouTube video player"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe>
     <p class="read__text">
