--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -5,11 +5,11 @@
         <ul class="list products-list">
             <li class="products-list__item products-list__item-first">
                 <div class="products-list__picture products-list__picture-first"><img
-                        src="./images/products/mobile_cream_product@1x.png" alt="icecream" srcset="./images/products/mobile_cream_product@1x.webp 200w,
+                        src="./images/products/mobile_cream_product@1x.png" alt="icecream" srcset="./images/products/mobile_cream_product@1x.png 200w,
                                             ./images/products/mobile_cream_product@2x.webp 400w,
-                                            ./images/products/tablet_cream_product@1x.webp 200w,
+                                            ./images/products/tablet_cream_product@1x.png 200w,
                                             ./images/products/tablet_cream_product@2x.webp 400w,
-                                            ./images/products/desktop__cream_product@1x.webp 302w,
+                                            ./images/products/desktop__cream_product@1x.png 302w,
                                             ./images/products/desktop__cream_product@2x.webp 604w"
                         sizes="(min-width: 1200px) 302px, (min-width: 768px) 200px, (min-width: 320px) 200px, 100vw">
                 </div>
@@ -27,9 +27,9 @@
                 <div class="products-list__picture products-list__picture-second"><img
                         src="./images/products/tablet_cofee_product@1x.png" alt="cofee product" srcset=" ./images/products/mobile_cofee_product@1x.png 200w,
                                             ./images/products/mobile_cofee_product@2x.webp 400w,
-                                            ./images/products/tablet_cofee_product@1x.webp 200w,
+                                            ./images/products/tablet_cofee_product@1x.png 200w,
                                             ./images/products/tablet_cofee_product@2x.webp 400w,
-                                            ./images/products/desktop_cofee_product@1x.webp 302w,
+                                            ./images/products/desktop_cofee_product@1x.png 302w,
                                             ./images/products/desktop_cofee_product@2x.webp 604w"
                         sizes="(min-width: 1200px) 302px, (min-width: 768px) 200px, (min-width: 320px) 200px, 100vw">
                 </div>
@@ -48,9 +48,9 @@
                 <div class="products-list__picture products-list__picture-third"><img
                         src="./images/products/mobile_milkshake_product@1x.png" alt="milkshake" srcset="./images/products/mobile_milkshake_product@1x.png 200w,
                                             ./images/products/mobile_milkshake_product@2x.webp 400w,
-                                            ./images/products/tablet_milkshake_product@1x.webp 200w,
+                                            ./images/products/tablet_milkshake_product@1x.png 200w,
                                             ./images/products/tablet_milkshake_product@2x.webp 400w,
-                                            ./images/products/desktop_milkshake_product@1x.webp 302w,
+                                            ./images/products/desktop_milkshake_product@1x.png 302w,
                                             ./images/products/desktop_milkshake_product@2x.webp 604w"
                         sizes="(min-width: 1200px) 302px, (min-width: 768px) 200px, (min-width: 320px) 200px, 100vw">
                 </div>
