--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -51,7 +51,7 @@
     }
 
     @media screen and (min-width: $desktop) {
-        margin-bottom: 129px;
+        margin-bottom: 121px;
         @include fonts(36, 45, 400);
     }
 }
@@ -70,6 +70,33 @@
 }
 
 .about-list__picture::before {
+        content: '';
+        display: block;
+        bottom: 22px;
+        position: absolute;
+        z-index: -1;
+
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+
+        background: var(--about-gr);
+        box-shadow: var(--about-shadow);
+
+    @media screen and (min-width: $tablet) {
+            content: '';
+            display: block;
+            bottom: 26px;
+            position: absolute;
+            z-index: -1;
+    
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+    
+            background: var(--about-gr);
+            box-shadow: var(--about-shadow);
+        }
 
     @media screen and (min-width: $desktop) {
         content: '';
@@ -104,17 +131,21 @@
     }
 
     @media screen and (min-width: $desktop) {
-        margin-left: 109px;
-        width: 463px;
+        margin: auto;
     }
 }
 
 
 @media screen and (max-width: 767px) {
     .about-list__text {
+        margin: auto;
+
+        max-width: 220px;
         text-align: center;
-        font-size: 12px;
-        line-height: calc(21px / 12px);
+        letter-spacing: 0.04em;
+        
+        @include fonts(12, 21, 400);
+       
     }
 }
 
@@ -124,18 +155,28 @@
     }
 }
 
-.about-list__text {
+@media screen and (max-width: 767px) {
+    .about-list__text--bottom {
+        margin-bottom: 4px;
+    }
+}
 
+.about-list__text {  
+    
     @media screen and (min-width: $tablet) {
-        margin-bottom: 8px;
-
+        max-width: 334px;
         text-align: left;
-
+        letter-spacing: 0.04em;
         @include fonts(12, 21, 400);
     }
 
     @media screen and (min-width: $desktop) {
-        @include fonts(16, 28, 400);
+        max-width: 463px;
+
+        letter-spacing: 0.04em;
+
+        @include fonts(14, 27, 400);
+        
     }
 
 }
@@ -144,6 +185,40 @@
 
     @media screen and (min-width: $tablet) {
         margin-bottom: 8px;
+    }
+}
+
+// .animate__animated.animate__bounceInRight
+//  {
+//     --animate-duration: 2000ms;
+// }
+
+
+.about-list__text {
+    overflow: hidden;
+}
+
+.about-list__text._active:nth-child(1) p {
+    transition: all 0.8s ease 0.1s;
+}
+
+.about-list__text._active:nth-child(2) p {
+    transition: all 0.8s ease 0.3s;
+}
+
+.about-list__text._active:nth-child(3) p {
+    transition: all 0.8s ease 0.5s;
+}
+
+.about__text {
+    transform: translate(120%, 0);
+    opacity: 0;
+    transition: all 0.8s ease 0s;
+        
+    &._active {
+        transform: translate(0px, 0px);
+        opacity: 1;
+        transition: all 0.8s ease 0.4s;
     }
 }
 
@@ -183,27 +258,33 @@
         align-items: baseline;
         min-width: 152px;
         padding: 12px 36px;
-
+    
         background: var(--btn-bg);
         border-radius: 10px;
         border: none;
-
+    
         @include fonts(14, 17, 600);
-
+    
         transition: $trns-bgc,
             $trns-hover;
-
+    
         &:hover {
             background-color: var(--btn-bg-hover);
         }
-
+    
         &:focus {
             background-color: var(--btn-bg-hover);
             color: var(--additional-bg);
         }
+
     }
 
     @media screen and (min-width: $desktop) {
         margin-top: 54px;
     }
+}
+
+.button__icon {
+    fill: currentColor;
+    margin-left: 4px;
 }
